--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]  # project’s basic metadata, such as the dependencies, your name, etc.
-name = "service_rest_api_template"
+name = "rag_api"
 version = "0.0.0"  #
 description = "Template for REST API service based on FastAPI"
 readme = "README.md"
