--- a/.env.dist
+++ b/.env.dist
@@ -2,4 +2,4 @@ DB_HOST=pg-e456ba1-konst-3f58.k.aivencloud.com
 DB_NAME=rag
 DB_USER=avnadmin
 DB_PASSWORD=AVNS_kqdyHi-ZmNH_JklK_AT
-FIREWORKS
+FIREWORKS_API_KEY="harmvuNWlUxCBNLqkG4O0F0IZLaI0ZlkNWE95wLtJ1T2xkqi"
