--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
-DB_HOST=pg-e456ba1-konst-3f58.k.aivencloud.com
-DB_NAME=rag
-DB_USER=avnadmin
-DB_PASSWORD=AVNS_kqdyHi-ZmNH_JklK_AT
-FIREWORKS_API_KEY="harmvuNWlUxCBNLqkG4O0F0IZLaI0ZlkNWE95wLtJ1T2xkqi"
+DB_HOST=<DB_HOST>
+DB_PORT=<DB_PORT>
+DB_NAME=<DB_NAME>
+DB_USER=<DB_USER>
+DB_PASSWORD=<DB_PASSWORD>
+FIREWORKS_API_KEY=<FIREWORKS_API_KEY>
